--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ body {
   font-family: arial, sans-serif;
 }
 
-li {
+.nav-bottom li {
   display: inline;
 }
 
@@ -89,4 +89,46 @@ li {
   position: absolute;
   margin-top: 53px;
   margin-left: 167px;
+}
+
+.results-list {
+  position: absolute;
+  width: 600px;
+  height: 342px;
+  margin-top: 120px;
+  margin-left: 167px;
+}
+
+.top-result {
+  border: medium none;
+  box-shadow: 1px .5px 2px #ccc, -1px 2px 2px #ccc;
+  padding: 25px;
+}
+
+.top-result-title {
+  color: #000;
+  font-family: Arial, sans-serif;
+  font-weight: 600;
+  font-size: 17px;
+  width: 50px;
+}
+
+.top-results-list {
+  display: block;
+}
+
+.more a{
+  color: #808080;
+}
+
+.more a:hover {
+  text-decoration: underline;
+}
+
+.site-links a {
+  color: #1a0dab;
+}
+
+.full-url {
+  color: #006621;
 }
